# lockbox

./: .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
lockbox/: manage.py
lockbox/common/: admin.py  constants.py  models.py  utils.py
lockbox/common/migrations/: 0001_initial.py
lockbox/lockbox/: asgi.py  settings.py  urls.py  wsgi.py
lockbox/static/js/: chunked_uploader.js
lockbox/storage/: admin.py  models.py  serializers.py  storage_backend.py  urls.py  views_api.py  views_client.py
lockbox/storage/migrations/: 0001_initial.py
lockbox/templates/: base.html
lockbox/templates/storage/: upload.html
lockbox/user/: admin.py  managers.py  models.py
lockbox/user/migrations/: 0001_initial.py
lockbox/user/tests/: test_user.py
